# app_repository_server

./: .editorconfig  .gitignore  Cargo.toml
.github/workflows/: deploy.yaml
src/: app_router.rs  database.rs  error.rs  lib.rs  main.rs  surrealdb_repo.rs
src/database/: client.rs
src/db/: client.rs
src/handlers/: artifacts.rs  mod.rs  projects.rs  users.rs
src/helpers/: artifact.rs  base64.rs  macros.rs  mod.rs  try_from.rs  uuid.rs
src/models/: artifact.rs  mod.rs  project.rs  user.rs  users.rs
src/repositories/: artifact.rs  project.rs  user.rs
src/schemas/: artifact.rs  project.rs  user.rs
