[package]
name = "app_repository_server"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = { version = "0.6.2", features = ["multipart", "headers"]}
axum-server = { version = "0.4", features = ["tls-rustls"] }
mongodb = "2.3.1"
serde_json = "1.0.89"
tokio = { version = "1.0", features = ["full"] }
tokio-util = "0.7.5"
serde = { version = "1.0.148", features = ["derive"] }
futures = "0.3.25"
tower-http = { version = "0.3.4", features = ["trace", "set-header", "timeout", "limit", "cors"]}
tracing = "0.1.37"
tracing-subscriber = { version = "0.3.16", features = ["env-filter"]}
dotenv = "0.15.0"
bson = { version = "2.4.0", features = ["uuid-0_8"] }
uuid = { version = "1.2.2", features = ["v4"] }
utoipa = { version = "3", features = ["axum_extras"] }
utoipa-swagger-ui = { version = "3.0.2", features = ["axum"] }
thiserror = "1.0"
data-encoding = "2.3.3"
ring = "0.16.20"
jsonwebtoken = { version = "8", default-features = false }
chrono = "0.4"
image = "0.24"
qrcode-generator = "4.1.7"
base64 = "0.21"
